Editted template. First published version

--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
+locale                   : "en-GB"
+title                    : "Oliver Long"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Oliver Long"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://oliverlong.info # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "ofl23/Website"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -49,6 +49,10 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
+# Header
+#header:
+#  image: /images/image-alignment-1200x4002.jpg
+
 # SEO Related
 google_site_verification :
 bing_site_verification   :
@@ -80,15 +84,17 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  name             : "Oliver Long"
+  avatar           : "profile.jpeg"
+  bio              : "Postgraduate Research Student"
+  location         : "Southampton, UK"
+  email            : "o.f.long@soton.ac.uk"
+  linkedin         : "oliverflong"
+  orcid            : "https://orcid.org/0000-0002-3897-9272"
+  researchgate     : "https://www.researchgate.net/profile/Oliver-Long-3"
+  googlescholar    : "https://scholar.google.com/citations?user=92pSUO0AAAAJ&hl=en"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  pubmed           : 
   uri              :
   bitbucket        :
   codepen          :
@@ -96,20 +102,17 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      : 
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    :
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
