Header gif now working

--- a/_config.yml
+++ b/_config.yml
@@ -201,10 +201,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
+      header:
+        image: WebsiteHeader.gif
   # _pages
   - scope:
       path: ""
@@ -212,6 +210,8 @@ defaults:
     values:
       layout: single
       author_profile: true
+      header:
+        image: WebsiteHeader.gif
   # _teaching
   - scope:
       path: ""
@@ -219,8 +219,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
-      comments: true
+      header:
+        image: WebsiteHeader.gif
   # _publications
   - scope:
       path: ""
@@ -228,8 +228,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
-      comments: true
+      header:
+        image: WebsiteHeader.gif
   # _portfolio
   - scope:
       path: ""
@@ -237,8 +237,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
-      comment: true
+      header:
+        image: WebsiteHeader.gif
   # _talks
   - scope:
       path: ""
@@ -246,7 +246,8 @@ defaults:
     values:
       layout: talk
       author_profile: true
-      share: true
+      header:
+        image: WebsiteHeader.gif
 
 # Sass/SCSS
 sass:
