Added Doctoral Prize to Senior Research Assistant

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : "Oliver Long"
   avatar           : "profile.jpeg"
-  bio              : "Senior Research Assistant"
+  bio              : "Doctoral Prize Senior Research Assistant"
   location         : "Southampton, UK"
   email            : "o.f.long@soton.ac.uk"
   linkedin         : "oliverflong"
