Changed more things to be AEI

--- a/_config.yml
+++ b/_config.yml
@@ -86,9 +86,9 @@ analytics:
 author:
   name             : "Oliver Long"
   avatar           : "profile.jpeg"
-  bio              : "Doctoral Prize Research Fellow"
-  location         : "Southampton, UK"
-  email            : "o.f.long@soton.ac.uk"
+  bio              : "Postdoctoral Researcher"
+  location         : "Potsdam"
+  email            : "oliver.long@aei.mpg.de"
   linkedin         : "oliverflong"
   orcid            : "https://orcid.org/0000-0002-3897-9272"
   researchgate     : "https://www.researchgate.net/profile/Oliver-Long-3"
