CV update and add , DE to location

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   name             : "Oliver Long"
   avatar           : "profile.jpeg"
   bio              : "Postdoctoral Researcher"
-  location         : "Potsdam"
+  location         : "Potsdam, DE"
   email            : "oliver.long@aei.mpg.de"
   linkedin         : "oliverflong"
   orcid            : "https://orcid.org/0000-0002-3897-9272"
