Renamed photo to get it to upload

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Oliver Long"
-  avatar           : "profile.jpeg"
+  avatar           : "profile_square.jpeg"
   bio              : "Postdoctoral Researcher"
   location         : "Potsdam, DE"
   email            : "oliver.long@aei.mpg.de"
