--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : "Oliver Long"
   avatar           : "profile_square.jpeg"
-  bio              : "Postdoctoral Scholar"
+  bio              : "Postdoctoral Researcher"
   location         : "Potsdam, DE"
   email            : "oliver.long@aei.mpg.de"
   linkedin         : "oliverflong"
