--- a/_config.yml
+++ b/_config.yml
@@ -643,7 +643,8 @@ jsonresume:
   - volunteer
   - awards
   - certificates
-  - skills
+  - coding
   - languages
   - interests
   - references
+  - collaborations
