--- a/_config.yml
+++ b/_config.yml
@@ -636,7 +636,8 @@ jekyll_get_json:
     json: assets/json/resume.json # it can also be an url
 jsonresume:
   - basics
-  - work
+  - positions
+  - teaching
   - education
   - publications
   - projects
